--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -69,7 +69,7 @@ height:100vh;
 .bruh2 {
 	 
   position: absolute;
-  margin-top: 15rem;
+  top: 5vh;
   left:10vh;
   margin-right: 43rem;
   margin-bottom: 10rem;
@@ -88,10 +88,10 @@ min-width: 20rem;
 
 .bruh3 {
   position: absolute;
-	margin-top: 35rem;
+	
   margin-left: 50rem;
   right:10vh;
-  margin-bottom: 10rem;
+  bottom:10vh;
 padding:10px;
 	text-align: left;
 	z-index: 100;
@@ -144,14 +144,7 @@ justify-content:right;
   right: 1rem;
 }
 
-
-
-
-
 }
-
-
-
 
 
 .title,
