static zoom out start pos

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -77,7 +77,7 @@ height:100vh;
 	text-align: left;
 	z-index: 100;
 	display:block;
-  font-size: 5rem;
+  font-size: 4vw;
   font-family: 'helvetica-neue', sans-serif;
   border-radius: 25px;
   background-color: black;
@@ -96,7 +96,7 @@ padding:10px;
 	text-align: left;
 	z-index: 100;
 	display:block;
-  font-size: 5rem;
+  font-size: 4vw;
   font-family: 'helvetica-neue', sans-serif;
   border-radius: 25px;
   background-color: white;
