--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,7 +76,7 @@
 
 .container {
 
-  widthL: 100%;
+  width: 100%;
 
   position: relative;
 
@@ -127,7 +127,7 @@
 
 .section1 {
   z-index: 10;
-  font-color: white;
+  color: white;
   justify-content: center;
   text-align: center;
   grid-column-start: 1;
@@ -173,7 +173,7 @@
 .AboutMe {
 
   z-index: 10;
-  text-color: white;
+  color: white;
   color: white;
 
 }
@@ -200,8 +200,8 @@
 .gridthumb:hover{
 
   transition: 0.3s;
-  opacity: 0.35;
-filter: blur(5px);
+  opacity: 0.3;
+filter: blur(3px);
 
 }
 
@@ -211,7 +211,6 @@ filter: blur(5px);
 
   background-color: #35858B;
   grid-column-start: 1;
-  grid-rows-end: 1;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
@@ -225,8 +224,8 @@ filter: blur(5px);
 
 .gridthumb {
 
-  width: fill;
-  height: fill;
+  width: 100%;
+  height: 100%;
   border-radius: 1rem;
 
 }
@@ -236,7 +235,6 @@ filter: blur(5px);
 
   background-color: #35858B;
   grid-column-start: 2;
-  grid-rows-end: 1;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
@@ -249,7 +247,6 @@ filter: blur(5px);
 
   background-color: #35858B;
   grid-column-start: 3;
-  grid-rows-end: 1;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
@@ -263,7 +260,6 @@ filter: blur(5px);
 
   background-color: #35858B;
   grid-column-start: 1;
-  grid-rows-end: 2;
   border: thin gray solid;
   border-radius: 1rem;
   height: 30vh;
@@ -277,7 +273,6 @@ filter: blur(5px);
 
   background-color: #35858B;
   grid-column-start: 2;
-  grid-rows-end: 2;
   border: thin gray solid;
   border-radius: 1rem;
   height: 30vh;
@@ -291,7 +286,6 @@ filter: blur(5px);
 
   background-color: #35858B;
   grid-column-start: 3;
-  grid-rows-end: 2;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
@@ -339,7 +333,6 @@ filter: blur(5px);
 
   .card1 {
     grid-column-start: 1;
-    grid-rows-end: 1;
     width: 100%;
 
 
