--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,76 +6,49 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
-
 
 .accent {
   height: 35vh;
-  background-color: #35858B;
+  background-color: #35858b;
   width: 100%;
-  z-index: 10;
   display: flex;
   flex-direction: rows;
   justify-content: center;
   align-items: center;
   position: relative;
-
 }
 
-
-.subheading{
-  z-index: 10;
+.subheading {
   font-size: 1.5rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
-
-
 }
 
 .boxText {
-
-  z-index: 10;
   font-size: 1rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
-  margin:2rem;
-  margin-bottom:8vh;
-
-}
-
-
-
-.IntroBox {
-
-  z-index: 10;
-  z-index: 10;
-
+  margin: 2rem;
+  margin-bottom: 8vh;
 }
 
 .IntroTitleText {
-  z-index: 10;
   font-size: 2rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
   margin-top: 0rem;
-
 }
 
 .IntroImage {
-
-
-  z-index: 10;
-
   width: 10vw;
-  min-width: 7rem
+  min-width: 7rem;
 }
 
 .container {
-
   width: 100%;
 
   position: relative;
@@ -83,221 +56,212 @@
   display: flex;
 
   flex-direction: column;
-
-
-
 }
 
 .ProjectSectionTitleText {
-
   margin-top: 4rem;
   font-size: 2rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
-
-
-
-
-
 }
 
-
-
 .IntroText {
-  z-index: 10;
   font-size: 1.25rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
   margin-top: 0rem;
-
 }
 
-
 .boxTitleText {
-  z-index: 10;
   font-size: 2rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
   margin-bottom: 5vh;
-
 }
 
 .section1 {
-  z-index: 10;
   color: white;
   justify-content: center;
   text-align: center;
   grid-column-start: 1;
   grid-column-end: 1;
-
 }
 
-
 .section1Icon {
-
   width: 5vw;
   min-width: 50px;
   margin-top: 3vh;
   color: white;
   fill: white;
   stroke: white;
-
 }
 
 .section2 {
-
-  z-index: 10;
   justify-content: center;
   text-align: center;
   grid-column-start: 2;
   grid-column-end: 2;
   border-left: 1px dashed #252730;
   border-right: 1px dashed #252730;
-
 }
 
 .section3 {
-
-  z-index: 10;
   justify-content: center;
   grid-column-start: 3;
   grid-column-end: 3;
   text-align: center;
-
 }
-
 
 .AboutMe {
-
-  z-index: 10;
   color: white;
-  color: white;
-
 }
-
-
-
 
 .caption {
   position: absolute;
   top: 35%;
   left: 50%;
-  transform: translate( -50%, -50% );
+  transform: translate(-50%, -50%);
   text-align: center;
   color: white;
   font-weight: bold;
-  z-index:-1;
   transition: 0.3s;
   font-size: 1.5rem;
-  font-size:3rem;
-   
+  font-size: 3rem;
+  z-index: -1;
 }
 
-
-.gridthumb:hover{
-
+.gridthumb:hover {
   transition: 0.3s;
   opacity: 0.3;
-filter: blur(3px);
-
+  filter: blur(3px);
 }
 
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+}
 
+.navbarContainers {
+  float: left;
+}
+
+.navbarElements {
+  display: block;
+  padding: 1rem;
+  margin-right: 1vw;
+  background-color: #35858b;
+  border-radius: 1rem;
+  color: #fafafa;
+  font-family: "helvetica-neue", sans-serif;
+  font-size: medium;
+  font-weight: bold;
+  width: 10rem;
+  text-align: center;
+}
+
+.Navbar {
+  position: fixed;
+  background-color: #333;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  transition: 0.5s;
+  margin: 0;
+  padding: 0;
+  z-index: 10;
+}
+
+.canvas {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+.Navbar a {
+  display: block;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  margin: 2rem;
+}
+
+.SidebarElementContainer {
+  margin-top: 7rem;
+}
+.Navbar a:hover {
+  color: #f1f1f1;
+}
+
+.Navbar2 {
+  overflow: hidden;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.SidebarBtn {
+  position: fixed;
+  color: #fff;
+  font-size: 5rem;
+  top: 0;
+  z-index: 100;
+  cursor: pointer;
+  margin-left: 2.4rem;
+  margin-right: auto;
+}
 
 .card1 {
-
-  background-color: #35858B;
+  z-index: 1;
+  background-color: #35858b;
   grid-column-start: 1;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
   height: 30vh;
-  z-index: 100;
   position: relative;
- 
-
-
 }
 
 .gridthumb {
-
   width: 100%;
   height: 100%;
   border-radius: 1rem;
-
 }
 
 .card2 {
-
-
-  background-color: #35858B;
+  z-index: 1;
+  background-color: #35858b;
   grid-column-start: 2;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
   height: 30vh;
-  z-index: 100;
   position: relative;
 }
 
 .card3 {
-
-  background-color: #35858B;
+  z-index: 1;
+  background-color: #35858b;
   grid-column-start: 3;
   border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
   height: 30vh;
   position: relative;
-  z-index: 100;
   position: relative;
 }
-
-.card4 {
-
-  background-color: #35858B;
-  grid-column-start: 1;
-  border: thin gray solid;
-  border-radius: 1rem;
-  height: 30vh;
-  width: 30vw;
-  z-index: 100;
-  position: relative;
-}
-
-
-.card5 {
-
-  background-color: #35858B;
-  grid-column-start: 2;
-  border: thin gray solid;
-  border-radius: 1rem;
-  height: 30vh;
-  width: 30vw;
-  z-index: 100;
-  position: relative;
-
-}
-
-.card6 {
-
-  background-color: #35858B;
-  grid-column-start: 3;
-  border: thin gray solid;
-  border-radius: 1rem;
-  width: 30vw;
-  height: 30vh;
-  z-index: 100;
-  position: relative;
-}
-
 
 .projectgrid {
-
-  z-index: 10;
   border-radius: 1rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -305,16 +269,13 @@ filter: blur(3px);
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 2vw 2vh;
 
-  width:auto;
+  width: auto;
   padding: 2vw;
-
-
 }
 
 .box {
   margin-top: -1rem;
   position: relative;
-  z-index: 10;
   background-color: #3b4351;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 1rem;
@@ -322,9 +283,7 @@ filter: blur(3px);
   grid-template-columns: repeat(3, 1fr);
   margin-left: 10vw;
   margin-right: 10vw;
-
 }
-
 
 @media (max-width: 700px) {
   .box {
@@ -334,39 +293,30 @@ filter: blur(3px);
   .card1 {
     grid-column-start: 1;
     width: 100%;
-
-
   }
 
-  .card2  {
+  .card2 {
     grid-column-start: 1;
     width: 100%;
-
-
   }
 
   .card3 {
     grid-column-start: 1;
     width: 100%;
-
-
   }
 
   .card4 {
     grid-column-start: 1;
     width: 100%;
-
   }
   .card5 {
     grid-column-start: 1;
     width: 100%;
-
   }
 
   .card6 {
     grid-column-start: 1;
     width: 100%;
-
   }
 
   .projectgrid {
@@ -378,8 +328,6 @@ filter: blur(3px);
   .section1 {
     grid-column-start: 1;
     grid-column-end: 1;
-
-
   }
 
   .section2 {
@@ -394,7 +342,6 @@ filter: blur(3px);
     grid-column-end: 1;
   }
 }
-
 
 .footer {
   display: flex;
@@ -429,27 +376,23 @@ filter: blur(3px);
   font-size: 4rem;
 }
 
-
-
 .background {
   background-color: #252730;
-
 }
-
 
 .development {
   background-color: #252730;
   margin-top: -1rem;
-
 }
-
 
 .bruh {
   background-color: #252730;
   padding: 0 0rem;
   margin: 0 0rem;
-  width: 100wh;
+  width: 100vw;
   height: 100vh;
+  z-index: -1111;
+  position: absolute;
 }
 
 .bruh2 {
@@ -458,10 +401,9 @@ filter: blur(3px);
   left: 10vw;
   padding: 10px;
   text-align: left;
-  z-index: 100;
   display: block;
   font-size: 4vw;
-  font-family: 'helvetica-neue', sans-serif;
+  font-family: "helvetica-neue", sans-serif;
   border-radius: 25px;
   background-color: black;
   color: white;
@@ -472,20 +414,15 @@ filter: blur(3px);
   overflow: hidden;
 }
 
-
-
-
-
 .bruh3 {
   position: absolute;
   right: 10vw;
   bottom: 10vh;
   padding: 10px;
   text-align: left;
-  z-index: 100;
   display: block;
   font-size: 4vw;
-  font-family: 'helvetica-neue', sans-serif;
+  font-family: "helvetica-neue", sans-serif;
   border-radius: 25px;
   background-color: white;
   color: black;
@@ -499,7 +436,6 @@ filter: blur(3px);
 @keyframes slideinToLeft {
   from {
     left: 40vw;
-
   }
 
   to {
@@ -509,7 +445,7 @@ filter: blur(3px);
 
 @keyframes slideinToRight {
   from {
-    right: 40vw
+    right: 40vw;
   }
 
   to {
@@ -517,19 +453,10 @@ filter: blur(3px);
   }
 }
 
-
-
-
-@media screen and (max-width:425px) {
-
-
+@media screen and (max-width: 425px) {
   /*implementation for smartphones*/
 
-
-
-
   .bruh2 {
-
     margin-top: 5vh;
     font-size: 2rem;
 
@@ -539,9 +466,8 @@ filter: blur(3px);
     color: white;
 
     white-space: normal;
-    overflow: normal
+    overflow: normal;
   }
-
 
   .bruh3 {
     font-size: 2rem;
@@ -556,11 +482,9 @@ filter: blur(3px);
     text-align: center;
 
     white-space: normal;
-    overflow: normal
+    overflow: normal;
   }
-
 }
-
 
 .title,
 .description {
