--- a/styles/Quizapp.module.css
+++ b/styles/Quizapp.module.css
@@ -3,7 +3,11 @@
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     color: white;
     text-align: left;
-    margin: 1rem;
+    margin-top : 2rem;
+    margin-bottom : 1rem;
+    margin-left: 7rem;
+    margin-right: 7rem;
+    
 }
 
 
@@ -93,11 +97,37 @@
 
 }
 
+.code {
+
+width: 80%;
+margin: auto;
+
+
+}
 
 .description {
-
+    
+    
     line-height: 1.5;
     font-size: 1rem;
     color: #fff;
+    margin-left: 7rem;
+    margin-right: 7rem;
 
+
+}
+
+.textcontainer{
+
+    margin: 0 auto;
+    max-width: 50%;
+
+
+}
+
+.github {
+
+
+
+    
 }
