--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
 }
 
 .boxText {
-  font-size: 1rem;
+  font-size: 1.15rem;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
@@ -33,14 +33,10 @@
   margin-top: 0rem;
 }
 
-
 .container {
   width: 100%;
-
   position: relative;
-
   display: flex;
-
   flex-direction: column;
 }
 
@@ -121,17 +117,16 @@
 
 .gridthumb:hover {
   transition: 0.3s;
-  opacity: 0.3;
-  filter: blur(3px);
+  opacity: 0.2;
+  filter: blur(5px);
 }
-
 
 .Sidebar {
   position: fixed;
   background-color: #333;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   transition: 0.5s;
   margin: 0;
   padding: 0;
@@ -189,7 +184,6 @@
   z-index: 1;
   background-color: #35858b;
   grid-column-start: 1;
-  border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
   height: 30vh;
@@ -206,7 +200,6 @@
   z-index: 1;
   background-color: #35858b;
   grid-column-start: 2;
-  border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
   height: 30vh;
@@ -217,7 +210,6 @@
   z-index: 1;
   background-color: #35858b;
   grid-column-start: 3;
-  border: thin gray solid;
   border-radius: 1rem;
   width: 30vw;
   height: 30vh;
@@ -232,7 +224,6 @@
   /* 3 columns */
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 2vw 2vh;
-
   width: auto;
   padding: 2vw;
 }
@@ -256,17 +247,18 @@
 
   .card1 {
     grid-column-start: 1;
-    width: 100%;
+    width: 75vw;
+ 
   }
 
   .card2 {
     grid-column-start: 1;
-    width: 100%;
+    width: 75vw;
   }
 
   .card3 {
     grid-column-start: 1;
-    width: 100%;
+    width: 75vw;
   }
 
 
@@ -294,16 +286,11 @@
   }
 }
 
-
-
-
 .background {
   background-color: #252730;
   margin: 0;
   padding: 0;
 }
-
-
 
 .mainbackground {
   background-color: #252730;
@@ -315,11 +302,8 @@
   position: absolute;
 }
 
-
 @media screen and (max-width: 425px) {
   /*implementation for smartphones*/
-
-
   .SidebarBtn {
     position: fixed;
     color: #fff;
