--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,13 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #252730;
+    padding: 0 0rem;
+    margin: 0 0rem;
+    width: 100%;
+    position: absolute;
 }
+
 
 a {
   color: inherit;
