--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -48,22 +48,21 @@
 }
 
 .textcontainer {
-
     margin: 0 auto;
     max-width: 50vw;
 }
 
 @media screen and (max-width: 900px) {
     .textcontainer {
-        max-width: 75vw;
+        max-width: 95vw;
     }
 
     .code {
-        max-width: 75vw;
+        max-width: 100%;
     }
 
     .quizappimg {
-        max-width: 75vw; ;
+        max-width: 100%; ;
     }
 
 }
