css mobile tuning

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -275,7 +275,7 @@
 
   .caption {
     margin-bottom: 1.8rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .button {
@@ -286,23 +286,25 @@
 
   .card1 {
 
-    width: 37.5vw;
-    height: 37.5vh;
+
     grid-column: auto;
+    width: 300px;
+    height: 250px;
 
   }
 
   .card2 {
-    width: 37.5vw;
-    height: 37.5vh;
+
     grid-column: auto;
+    width: 300px;
+    height: 250px;
   }
 
   .card3 {
     grid-column: auto;
+    width: 300px;
+    height: 250px;
 
-    width: 37.5vw;
-    height: 37.5vh;
   }
 
   .projectgrid {
@@ -329,7 +331,7 @@
 }
 
 
-@media (max-width: 770px) {
+@media (max-width: 650px) {
   .box {
     grid-template-columns: 1fr;
   }
@@ -342,7 +344,7 @@
 
   .caption {
     margin: 1.5rem;
-    font-size: 1.5rem;
+    font-size: 1.45rem;
   }
 
   .button {
@@ -354,20 +356,20 @@
   .card1 {
     grid-column-start: 1;
     width: 75vw;
-    height: 37.5vh;
+    height: 225px;
 
   }
 
   .card2 {
     grid-column-start: 1;
     width: 75vw;
-    height: 37.5vh;
+    height: 225px;
   }
 
   .card3 {
     grid-column-start: 1;
     width: 75vw;
-    height: 37.5vh;
+    height: 225px;
   }
 
   .projectgrid {
