--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,12 @@
+.background3D {
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  border: none;
+}
+
 .accent {
   height: 35vh;
   background-color: #35858b;
@@ -230,7 +239,7 @@
 }
 
 .card3 {
- 
+
   grid-column-start: 3;
   border-radius: 1rem;
   width: 25vw;
@@ -421,7 +430,7 @@
     font-size: 1.25rem;
     margin: 0 auto;
     line-height: 1.5rem;
-    
+
   }
 
   .IntroTitleText {
