--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,6 +56,7 @@
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   color: white;
   text-align: center;
+  padding: 0.5rem;
 }
 
 .boxText {
@@ -445,7 +446,7 @@
 }
 
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 475px) {
 
   /*implementation for smartphones*/
   .SidebarBtn {
