--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,48 +1,43 @@
-.footer{
+.footer {
     position: relative;
     bottom: 0;
     left: 0;
     right: 0;
-    height:150px;
-    
+    height: 150px;
 }
 
 .footerContent {
-
     text-align: center;
     padding: 0.5rem;
     background-color: #000000;
     color: white;
     font-size: 1rem;
     height: 100%;
-
 }
 
-
 .ul {
-    position:absolute;
-    top:50%;
-    left:50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    padding:0;
-    display:flex;
-  }
-  
-  .ul li {
+    padding: 0;
+    display: flex;
+}
+
+.ul li {
     list-style: none;
-  }
-  
-  .ul li a {
+}
+
+.ul li a {
     position: relative;
     font-size: 2rem;
-    width:4rem;
-    height:3rem;
-    display:block;
-    text-align:center;
-    margin:0 15px;
+    width: 4rem;
+    height: 3rem;
+    display: block;
+    text-align: center;
+    margin: 0 15px;
     border-radius: 50%;
     box-sizing: border-box;
-    text-decoration:none;
-    transition: .5s;
-  }
-  
+    text-decoration: none;
+    transition: 0.5s;
+}
