--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,475 +1,484 @@
 .background3D {
-  width: 100%;
-  height: 100vh;
-  left: 0;
-  top: 0;
-  pointer-events: none;
-  border: none;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    border: none;
 }
 
 .loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .spinner {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  border: 0.2rem solid #ccc;
-  border-top-color: #007bff;
-  animation: spin 1s ease-in-out infinite;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    border: 0.2rem solid #ccc;
+    border-top-color: #007bff;
+    animation: spin 1s ease-in-out infinite;
 }
 
 .text {
-  margin-top: 1rem;
-  font-size: 1.2rem;
-  color: #007bff;
-  text-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    color: #007bff;
+    text-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
 }
 
 @keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .accent {
-  height: 35vh;
-  background-color: #35858b;
-  width: 100%;
-  display: flex;
-  flex-direction: rows;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+    height: 35vh;
+    background-color: #35858b;
+    width: 100%;
+    display: flex;
+    flex-direction: rows;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .subheading {
-  font-size: 1.5rem;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
-  padding: 0.5rem;
+    font-size: 1.5rem;
+    font-family:
+        Arial,
+        Helvetica Neue,
+        Helvetica,
+        sans-serif;
+    color: white;
+    text-align: center;
+    padding: 0.5rem;
 }
 
 .boxText {
-  font-size: 1.15rem;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
-  margin: 2rem;
-  margin-bottom: 8vh;
+    font-size: 1.15rem;
+    font-family:
+        Arial,
+        Helvetica Neue,
+        Helvetica,
+        sans-serif;
+    color: white;
+    text-align: center;
+    margin: 2rem;
+    margin-bottom: 8vh;
 }
 
 .IntroTitleText {
-  font-size: 2rem;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
-  margin-top: 0rem;
+    font-size: 2rem;
+    font-family:
+        Arial,
+        Helvetica Neue,
+        Helvetica,
+        sans-serif;
+    color: white;
+    text-align: center;
+    margin-top: 0rem;
 }
 
 .container {
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .ProjectSectionTitleText {
-  margin-top: 4rem;
-  font-size: 2rem;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
+    margin-top: 4rem;
+    font-size: 2rem;
+    font-family:
+        Arial,
+        Helvetica Neue,
+        Helvetica,
+        sans-serif;
+    color: white;
+    text-align: center;
 }
 
 .IntroText {
-  font-size: 1.25rem;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
-  margin-top: 0rem;
-  line-height: 2rem;
+    font-size: 1.25rem;
+    font-family:
+        Arial,
+        Helvetica Neue,
+        Helvetica,
+        sans-serif;
+    color: white;
+    text-align: center;
+    margin-top: 0rem;
+    line-height: 2rem;
 }
 
 .boxTitleText {
-  font-size: 2rem;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
-  margin-bottom: 5vh;
+    font-size: 2rem;
+    font-family:
+        Arial,
+        Helvetica Neue,
+        Helvetica,
+        sans-serif;
+    color: white;
+    text-align: center;
+    margin-bottom: 5vh;
 }
 
 .section1 {
-  color: white;
-  justify-content: center;
-  text-align: center;
-  grid-column-start: 1;
-  grid-column-end: 1;
+    color: white;
+    justify-content: center;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 1;
 }
 
 .section1Icon {
-  width: 5vw;
-  min-width: 50px;
-  margin-top: 3vh;
-  color: white;
-  fill: white;
-  stroke: white;
+    width: 5vw;
+    min-width: 50px;
+    margin-top: 3vh;
+    color: white;
+    fill: white;
+    stroke: white;
 }
 
 .section2 {
-  justify-content: center;
-  text-align: center;
-  grid-column-start: 2;
-  grid-column-end: 2;
-  border-left: 1px dashed #252730;
-  border-right: 1px dashed #252730;
+    justify-content: center;
+    text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    border-left: 1px dashed #252730;
+    border-right: 1px dashed #252730;
 }
 
 .section3 {
-  justify-content: center;
-  grid-column-start: 3;
-  grid-column-end: 3;
-  text-align: center;
+    justify-content: center;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    text-align: center;
 }
 
 .AboutMe {
-  color: white;
+    color: white;
 }
 
 .caption {
-  position: absolute;
-  margin: 3vh 2vw;
-  text-align: center;
-  color: white;
-  font-weight: 350;
-  transition: 0.5s;
-  font-size: 1.5rem;
+    position: absolute;
+    margin: 3vh 2vw;
+    text-align: center;
+    color: white;
+    font-weight: 350;
+    transition: 0.5s;
+    font-size: 1.5rem;
 }
 
 .Sidebar {
-  position: fixed;
-  background-color: #333;
-  top: 0;
-  left: 0;
-  height: 100%;
-  transition: 0.5s;
-  margin: 0;
-  padding: 0;
-  z-index: 10;
+    position: fixed;
+    background-color: #333;
+    top: 0;
+    left: 0;
+    height: 100%;
+    transition: 0.5s;
+    margin: 0;
+    padding: 0;
+    z-index: 10;
 }
 
 .Sidebar a {
-  display: block;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-  margin: 2.5rem;
+    display: block;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    margin: 2.5rem;
 }
 
 .SidebarElementContainer {
-  margin-top: 7rem;
+    margin-top: 7rem;
 }
 
 .Sidebar a:hover {
-  color: #f1f1f1;
+    color: #f1f1f1;
 }
 
 .SidebarInvis {
-  overflow: hidden;
-  background-color: #333;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  margin: 0;
-  padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .SidebarBtn {
-  position: fixed;
-  color: #fff;
-  font-size: 5rem;
-  top: 0;
-  z-index: 100;
-  cursor: pointer;
-  margin-left: 2.4rem;
-  margin-right: auto;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25vh;
-  width: 25vw;
-  transition: 0.5s;
-  opacity: 0;
-  z-index: 1;
-  border-radius: 1rem;
-}
-
-.overlay:hover {
-  transition: 0.5s;
-  opacity: 1;
-  opacity: 1;
-}
-
-.card1 {
-  grid-column-start: 1;
-  border-radius: 1rem;
-  width: 25vw;
-  height: 25vh;
-  position: relative;
-}
-
-.gridthumb {
-  width: 100%;
-  height: 100%;
-  border-radius: 1rem;
-}
-
-.button {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-  font-weight: 400;
-  transition: 0.3s;
-  font-size: 1.25rem;
-  border: #fff solid 2px;
-  border-radius: 9999px;
-  padding: 0.6rem;
-  cursor: pointer;
-  margin-top: 1.25rem
-}
-
-.button:hover {
-  transition: 0.5s;
-  background-color: #fff;
-  color: #252730;
-  border-color: none;
-}
-
-.card2 {
-
-  grid-column-start: 2;
-  border-radius: 1rem;
-  width: 25vw;
-  height: 25vh;
-  position: relative;
-}
-
-.card3 {
-
-  grid-column-start: 3;
-  border-radius: 1rem;
-  width: 25vw;
-  height: 25vh;
-  position: relative;
-}
-
-.projectgrid {
-  border-radius: 1rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* 3 columns */
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 2vw 2vh;
-  width: fit-content;
-  padding: 2vw;
-  margin: 2vh auto;
-}
-
-.box {
-  margin-top: -1rem;
-  position: relative;
-  background-color: #3b4351;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 1rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin-left: 10vw;
-  margin-right: 10vw;
-}
-
-@media (max-width: 1280px) {
-  .box {
-    grid-template-columns: 1fr;
-  }
-
-  .overlay {
-    width: 100%;
-    height: 100%;
-  }
-
-
-  .caption {
-    margin-bottom: 1.8rem;
-    font-size: 1.5rem;
-  }
-
-  .button {
-    padding: 0.5rem;
-    font-size: 1.25rem;
-
-  }
-
-  .card1 {
-
-
-    grid-column: auto;
-    width: 300px;
-    height: 250px;
-
-  }
-
-  .card2 {
-
-    grid-column: auto;
-    width: 300px;
-    height: 250px;
-  }
-
-  .card3 {
-    grid-column: auto;
-    width: 300px;
-    height: 250px;
-
-  }
-
-  .projectgrid {
-    grid-template-columns: repeat(2, 1fr);
-    margin: auto;
-  }
-
-  .section1 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-
-  .section2 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    border-top: 0.5px dashed #252730;
-    border-bottom: 0.5px dashed #252730;
-  }
-
-  .section3 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-}
-
-
-@media (max-width: 650px) {
-  .box {
-    grid-template-columns: 1fr;
-  }
-
-  .overlay {
-    width: 100%;
-    height: 100%;
-  }
-
-
-  .caption {
-    margin: 1.5rem;
-    font-size: 1.45rem;
-  }
-
-  .button {
-    padding: 0.5rem;
-    font-size: 1.25rem;
-
-  }
-
-  .card1 {
-    grid-column-start: 1;
-    width: 75vw;
-    height: 225px;
-
-  }
-
-  .card2 {
-    grid-column-start: 1;
-    width: 75vw;
-    height: 225px;
-  }
-
-  .card3 {
-    grid-column-start: 1;
-    width: 75vw;
-    height: 225px;
-  }
-
-  .projectgrid {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    margin: auto;
-  }
-
-  .section1 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-
-  .section2 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    border-top: 0.5px dashed #252730;
-    border-bottom: 0.5px dashed #252730;
-  }
-
-  .section3 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-}
-
-.background {
-  background-color: #252730;
-  margin: 0;
-  padding: 0;
-}
-
-
-@media screen and (max-width: 475px) {
-
-  /*implementation for smartphones*/
-  .SidebarBtn {
     position: fixed;
     color: #fff;
-    font-size: 3rem;
+    font-size: 5rem;
     top: 0;
     z-index: 100;
     cursor: pointer;
-    margin-left: 3.25rem;
+    margin-left: 2.4rem;
     margin-right: auto;
-  }
+}
 
-  .IntroText {
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25vh;
+    width: 25vw;
+    transition: 0.5s;
+    opacity: 0;
+    z-index: 1;
+    border-radius: 1rem;
+}
+
+.overlay:hover {
+    transition: 0.5s;
+    opacity: 1;
+    opacity: 1;
+}
+
+.card1 {
+    grid-column-start: 1;
+    border-radius: 1rem;
+    width: 25vw;
+    height: 25vh;
+    position: relative;
+}
+
+.gridthumb {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+}
+
+.button {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    font-weight: 400;
+    transition: 0.3s;
     font-size: 1.25rem;
-    margin: 0 auto;
-    line-height: 1.5rem;
+    border: #fff solid 2px;
+    border-radius: 9999px;
+    padding: 0.6rem;
+    cursor: pointer;
+    margin-top: 1.25rem;
+}
 
-  }
+.button:hover {
+    transition: 0.5s;
+    background-color: #fff;
+    color: #252730;
+    border-color: none;
+}
 
-  .IntroTitleText {
-    font-size: 1.5rem;
-    margin: 0.5rem auto;
+.card2 {
+    grid-column-start: 2;
+    border-radius: 1rem;
+    width: 25vw;
+    height: 25vh;
+    position: relative;
+}
 
-  }
+.card3 {
+    grid-column-start: 3;
+    border-radius: 1rem;
+    width: 25vw;
+    height: 25vh;
+    position: relative;
+}
+
+.projectgrid {
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* 3 columns */
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 2vw 2vh;
+    width: fit-content;
+    padding: 2vw;
+    margin: 2vh auto;
+}
+
+.box {
+    margin-top: -1rem;
+    position: relative;
+    background-color: #3b4351;
+    box-shadow:
+        0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
+
+@media (max-width: 1280px) {
+    .box {
+        grid-template-columns: 1fr;
+    }
+
+    .overlay {
+        width: 100%;
+        height: 100%;
+    }
+
+    .caption {
+        margin-bottom: 1.8rem;
+        font-size: 1.5rem;
+    }
+
+    .button {
+        padding: 0.5rem;
+        font-size: 1.25rem;
+    }
+
+    .card1 {
+        grid-column: auto;
+        width: 300px;
+        height: 250px;
+    }
+
+    .card2 {
+        grid-column: auto;
+        width: 300px;
+        height: 250px;
+    }
+
+    .card3 {
+        grid-column: auto;
+        width: 300px;
+        height: 250px;
+    }
+
+    .projectgrid {
+        grid-template-columns: repeat(2, 1fr);
+        margin: auto;
+    }
+
+    .section1 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+
+    .section2 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        border-top: 0.5px dashed #252730;
+        border-bottom: 0.5px dashed #252730;
+    }
+
+    .section3 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+}
+
+@media (max-width: 650px) {
+    .box {
+        grid-template-columns: 1fr;
+    }
+
+    .overlay {
+        width: 100%;
+        height: 100%;
+    }
+
+    .caption {
+        margin: 1.5rem;
+        font-size: 1.45rem;
+    }
+
+    .button {
+        padding: 0.5rem;
+        font-size: 1.25rem;
+    }
+
+    .card1 {
+        grid-column-start: 1;
+        width: 75vw;
+        height: 225px;
+    }
+
+    .card2 {
+        grid-column-start: 1;
+        width: 75vw;
+        height: 225px;
+    }
+
+    .card3 {
+        grid-column-start: 1;
+        width: 75vw;
+        height: 225px;
+    }
+
+    .projectgrid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        margin: auto;
+    }
+
+    .section1 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+
+    .section2 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        border-top: 0.5px dashed #252730;
+        border-bottom: 0.5px dashed #252730;
+    }
+
+    .section3 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+}
+
+.background {
+    background-color: #252730;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 475px) {
+    /*implementation for smartphones*/
+    .SidebarBtn {
+        position: fixed;
+        color: #fff;
+        font-size: 3rem;
+        top: 0;
+        z-index: 100;
+        cursor: pointer;
+        margin-left: 3.25rem;
+        margin-right: auto;
+    }
+
+    .IntroText {
+        font-size: 1.25rem;
+        margin: 0 auto;
+        line-height: 1.5rem;
+    }
+
+    .IntroTitleText {
+        font-size: 1.5rem;
+        margin: 0.5rem auto;
+    }
 }
