Fix mobile fitment issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -141,8 +141,10 @@
 }
 
 .section1Icon {
-    width: 5vw;
-    min-width: 50px;
+    min-width:75px;
+    min-height:75px;
+    width: 5rem;
+    height: 5rem;
     margin-top: 3vh;
     color: white;
     fill: white;
@@ -380,13 +382,21 @@
     .section2 {
         grid-column-start: 1;
         grid-column-end: 1;
-        border-top: 0.5px dashed #252730;
-        border-bottom: 0.5px dashed #252730;
+        border-top: 1px dashed #252730;
+        border-bottom: 1px dashed #252730;
+        border-left: none;
+        border-right: none;
     }
 
     .section3 {
         grid-column-start: 1;
         grid-column-end: 1;
+    }
+
+    .boxText {
+
+        margin: 1rem;
+        margin-bottom: 4vh;
     }
 }
 
@@ -450,6 +460,10 @@
         grid-column-start: 1;
         grid-column-end: 1;
     }
+
+    .accent {
+        height: 55vh;
+    }
 }
 
 .background {
@@ -473,12 +487,11 @@
 
     .IntroText {
         font-size: 1.25rem;
-        margin: 0 auto;
         line-height: 1.5rem;
     }
 
     .IntroTitleText {
         font-size: 1.5rem;
-        margin: 0.5rem auto;
+        margin: 5px auto;
     }
 }
